--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -15,10 +15,10 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.5.0 (01/??/2010)</h1>
+<h1>Version 0.5.0 (01/10/2010)</h1>
 <h2>New in this version</h2>
 <ul>
-<li>Adds a budget view.</li><li>Adds a preference panel to configure
+<li>Adds a budget view (it seems users really want it).</li><li>Adds a preference panel to configure
 the balance report fields colors (some users reported the positive
 balance were quite illegible).</li><li><span class="bugFix">Bug fixed</span> :
 In statistic panel, sometimes, some transactions that would have been rejected by the filter was not.</li></ul>
@@ -34,7 +34,7 @@ the XML file ... at your own risks.</li>
 dialog that would be able to complete the description as you type and
 to deduce other informations (especially categories).</li>
 <li>Some new statistic charts.</li>
-<li>The ability to bookmark prefered filters.</li>
+<li>The ability to bookmark prefered filters.</li><li>The ability to defined a target budget and to compare it to the real life ;-)</li>
 <li>The ability to compress and encrypt data files and store
 them over the Internet.</li>
 <li>Maybe the ability to deal with OFX data files ... If a lot
