--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -16,10 +16,10 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.5.0 (??/01/2010)</h1>
+<h1>Version 0.5.0 (10/01/2010)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
-<li>Ajout d'un vue budgetaire.</li><li>Ajout d'un panneau de préférénces permettant de configurer la couleur du rapport des soldes
+<li>Ajout d'un vue budgetaire (Il semble que certains utilisateurs la veulent vraiment).</li><li>Ajout d'un panneau de préférénces permettant de configurer la couleur du rapport des soldes
 (des utilisateurs ont rapporté que les soldes positifs étaient quasiment illisibles).</li><li><span class="bugFix">Correction de
 bug&nbsp;</span>: Parfois, dans
 le panneau statistiques, certaines opérations étaient prises en compte
@@ -35,7 +35,7 @@ périls.</li><li>La possibilité d'éditer plusieurs opérations à la fois.</li>
 <li>Une auto-complétion dans le dialogue de création
 d'une opération. Celui-ci serait chargé de completer les descriptions
 possibles au fur et à mesure de la saisie et en déduire les
-informations (typiquement la catégorie).</li><li>De nouveaux graphiques de statistiques</li><li>La possibilité de créer des raccourcis vers les filtres préférés.</li>
+informations (typiquement la catégorie).</li><li>De nouveaux graphiques de statistiques</li><li>La possibilité de créer des raccourcis vers les filtres préférés.</li><li>La possibilité de définir un budget cible et de le comparer à la dure réalité ;-)</li>
 <li>La possibilité de compresser le fichier de
 données, de le protéger par mot de passe, et de le stocker/lire sur
 Internet.</li><li>Peut-être
