--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -18,7 +18,7 @@ color: #ff9900;
 <h1>Version 0.5.1 (01/17/2010)</h1>
 <h2>New in this version</h2>
 <ul>
-<li>Adds transactions printing (feature resqueted by users).</li></ul>
+<li>Adds transactions printing (feature resqueted by users).</li><li>Add a button in the transactions table to show/hide all the subtransactions.</li></ul>
 <h2>What is planned in future versions</h2>
 <ul>
 <li>Something
