--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -19,7 +19,7 @@ color: #ff9900;
 <h1>Version 0.5.1 (17/01/2010)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
-<li>Support de l'impression de la liste des opérations.</li></ul>
+<li>Support de l'impression de la liste des opérations.</li><li>Ajout d'un bouton dans la table des opérations pour afficher/masquer toutes les sous-opérations.</li></ul>
 <h2>Fonctionnalités prévues pour de prochaines versions</h2>
 <ul>
 <li>L'édition des modes de paiement (pour l'instant, on peut
