--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -15,23 +15,18 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.5.1 (01/17/2010)</h1>
+<h1>Version 0.5.2 (01/18/2010)</h1>
 <h2>New in this version</h2>
 <ul>
-<li>Adds transactions printing (feature resqueted by users).</li><li>Add a button in the transactions table to show/hide all the subtransactions.</li></ul>
+<li>Adds ability to edit payment modes.</li></ul>
 <h2>What is planned in future versions</h2>
 <ul>
-<li>Something
-to edit payment modes ... (currently, you can add or remove them, but
-not
-edit). For now, you have to manually edit
-the XML file ... at your own risks.</li>
 <li>The ability to edit several transactions at a time.</li>
 <li>An auto-complete wizard in the "new transaction"
 dialog that would be able to complete the description as you type and
 to deduce other informations (especially categories).</li>
 <li>Some new statistic charts.</li>
-<li>The ability to bookmark prefered filters.</li><li>The ability to defined a target budget and to compare it to the real life ;-)</li>
+<li>The ability to bookmark preferred filters.</li><li>The ability to defined a target budget and to compare it to the real life ;-)</li>
 <li>The ability to compress and encrypt data files and store
 them over the Internet.</li>
 <li>Maybe the ability to deal with OFX data files ... If a lot
@@ -39,6 +34,10 @@ of users ask for it.</li>
 </ul>
 <hr>
 <h1>Older releases</h1>
+<h2>Version 0.5.1 (01/17/2010)</h2>
+<ul>
+<li>Adds transactions printing (feature requested by users).</li><li>Add a button in the transactions table to show/hide all the subtransactions.</li>
+</ul>
 <h2>Version 0.5.0 (01/10/2010)</h2><ul><li>Adds a budget view (it seems users really want it).</li><li>Adds a preference panel to configure
 the balance report fields colors (some users reported the positive
 balance were quite illegible).</li><li><span class="bugFix">Bug fixed</span> :
