--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -15,19 +15,19 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.5.2-2 (01/23/2010)</h1>
+<h1>Version 0.5.3 (01/24/2010)</h1>
 <h2>New in this version</h2>
 <ul>
-<li>Preliminary Portuguese translation (Thank's to Marco)</li></ul>
+<li>Preliminary Portuguese translation (Thank's to Marco)</li><li>Adds the ability to show/hide columns in the transactions table.</li></ul>
 <h2>What is planned in future versions</h2>
 <ul>
 <li>The ability to edit several transactions at a time.</li>
 <li>An auto-complete wizard in the "new transaction"
 dialog that would be able to complete the description as you type and
 to deduce other informations (especially categories).</li>
-<li>Some new statistic charts.</li>
+<li>Improvements in statistic charts (grouping categories).</li>
 <li>The ability to bookmark preferred filters.</li><li>The ability to defined a target budget and to compare it to the real life ;-)</li>
-<li>The ability to compress and encrypt data files and store
+<li>The ability to encrypt data files and, maybe, to compress and store
 them over the Internet.</li>
 <li>Maybe the ability to deal with OFX data files ... If a lot
 of users ask for it.</li>
