--- a/src/localization/license.html
+++ b/src/localization/license.html
@@ -1,8 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head>
-<meta content="text/html;charset=ISO-8859-1" http-equiv="Content-Type"><title>License</title>
-
-</head>
+<meta content="text/html;charset=ISO-8859-1" http-equiv="Content-Type"><title>License</title></head>
 <body>
 This
 program is free software: you can redistribute it and/or modify it
@@ -23,6 +21,6 @@ License</a>.
 This software use the JFreeChart library released under <a href="http://www.gnu.org/licenses/lgpl.html">Lesser General Public License</a>.
 The source code of this library is available at <a href="http://www.jfree.org/jfreechart/">http://www.jfree.org/jfreechart/</a>.
 <br><br>
-This software use a modified version of Currency converter written by Thomas Knierim released under <a href="http://www.gnu.org/licenses/gpl-3.0.html">General Public License</a>.
-The source code of this class is included in Yapbam sources (net.yapbam.currency.CurrencyConverter).
+This software use a modified version of Currency converter written by Thomas Knierim released under <a href="http://www.gnu.org/licenses/gpl-3.0.html">General Public License</a>. Its source code is included in Yapbam sources (net.yapbam.currency.CurrencyConverter).<br><br>
+This software use a component&nbsp;written by <a href="http://www.stephenkelvin.de/XTableColumnModel/">Stephen Kelvin</a>. Its source code&nbsp;is included in Yapbam sources (net.yapbam.gui.util.XTableColumnModel).
 </body></html>
