--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -18,7 +18,7 @@ color: #ff9900;
 <body>
 <h1>Version 0.5.3 (24/01/2010)</h1>
 <h2>Nouveautés de cette version</h2>
-<ul><li>Support partiel du portuguais (Merci à Marco).</li><li>Ajout de la possibilité de masquer les colonnes dans la tables des opérations.</li></ul>
+<ul><li>Traduction en portuguais du convertisseur de devises (Merci à Marco).</li><li>Ajout de la possibilité de masquer les colonnes dans la tables des opérations.</li></ul>
 <h2>Fonctionnalités prévues pour de prochaines versions</h2>
 <ul>
 <li>La possibilité d'éditer plusieurs opérations à la fois.</li>
