--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -14,36 +14,101 @@ color: #AA0000;
 color: #ff9900;
 }
 -->
-</style></head>
+</style>
+</head>
 <body>
 <h1>Version 0.6.1 (??/03/2010)</h1>
 <h2>Nouveautés de cette version</h2>
-<ul><li>Améliore l'écran d'administration des comptes.</li></ul><hr>
+<ul>
+<li>Améliore l'écran d'administration des comptes.</li>
+<li><span class="bugFix">Correction d'un bug</span>
+: Yapbam avait un comportement étrange quand une date avant l'an 1900
+était saisie. </li>
+</ul>
+<hr>
 <h1>Versions précédentes</h1>
-<h2>Version&nbsp;0.6.0 (09/03/2010)</h2><ul><li>Ajoute la possibilité d'importer/exporter vers des fichiers texte.</li><li>Ajout
+<h2>Version&nbsp;0.6.0 (09/03/2010)</h2>
+<ul>
+<li>Ajoute la possibilité d'importer/exporter vers des fichiers
+texte.</li>
+<li>Ajout
 d'une icône d'alerte dans l'onglet de l'historique du solde quand
-celui-ci présente une période de découvert dans le futur.</li><li>Améliore le comportement des champs de saisie de dates.</li><li><span class="bugFix">Correction</span> d'un bug dans l'autocomplétion qui, parfois, ne parvenait pas à déduire le mode de paiement.</li><li><span class="bugFix">Correction</span>&nbsp;d'un
-bug dans la table des opérations; parfois, quand une opération avait
-des sous-opération, il apparaissait un complément de montant nul</li></ul><h2>Version&nbsp;0.5.4 (08/02/2010)</h2><ul><li>Traduction en portugais (Merci à Marco).</li><li><span class="bugFix">Correction</span> d'un bug entrainant la suppression du fichier de données lors de la sauvegarde sur certaines configurations Linux.</li><li>Ajout d'une auto-complétion dans le dialogue de création
+celui-ci présente une période de découvert dans le futur.</li>
+<li>Améliore le comportement des champs de saisie de dates.</li>
+<li><span class="bugFix">Correction d'un bug</span>
+dans
+l'autocomplétion qui, parfois, ne parvenait pas à déduire le mode de
+paiement.</li>
+<li><span class="bugFix">Correction&nbsp;d'un
+bug</span> dans la table des opérations; parfois, quand une
+opération avait
+des sous-opération, il apparaissait un complément de montant nul</li>
+</ul>
+<h2>Version&nbsp;0.5.4 (08/02/2010)</h2>
+<ul>
+<li>Traduction en portugais (Merci à Marco).</li>
+<li><span class="bugFix">Correction
+d'un bug</span> entrainant la suppression du fichier de données lors de la
+sauvegarde sur certaines configurations Linux.</li>
+<li>Ajout d'une auto-complétion dans le dialogue de création
 d'une opération. Celui-ci complète les descriptions
-possibles au fur et à mesure de la saisie et en déduit la catégorie et le mode de paiement.</li></ul><h2>Version&nbsp;0.5.3 (25/01/2010)</h2><ul><li>Traduction en portugais du convertisseur de devises (Merci à Marco).</li><li><span class="bugFix">Correction</span>
-de nombreuses erreurs dans la version anglaise (Merci à Sharada)</li><li>Ajout de la possibilité de masquer les colonnes dans la tables des opérations.</li></ul><h2>Version&nbsp;0.5.2 (21/01/2010)</h2><ul><li>Ajout de la possibilité d'éditer les modes de paiement.</li></ul><h2>Version&nbsp;0.5.1 (17/01/2010)</h2><ul><li>Support de l'impression de la liste des opérations.</li><li>Ajout d'un bouton dans la table des opérations pour afficher/masquer toutes les sous-opérations.</li></ul><h2>Version&nbsp;0.5.0 (10/01/2010)</h2><ul><li>Ajout d'un vue budgetaire (Il semble que certains utilisateurs la veulent vraiment).</li><li>Ajout d'un panneau de préférénces permettant de configurer la couleur du rapport des soldes
-(des utilisateurs ont rapporté que les soldes positifs étaient quasiment illisibles).</li><li><span class="bugFix">Correction de
+possibles au fur et à mesure de la saisie et en déduit la catégorie et
+le mode de paiement.</li>
+</ul>
+<h2>Version&nbsp;0.5.3 (25/01/2010)</h2>
+<ul>
+<li>Traduction en portugais du convertisseur de devises (Merci
+à Marco).</li>
+<li><span class="bugFix">Correction</span>
+de nombreuses erreurs dans la version anglaise (Merci à Sharada)</li>
+<li>Ajout de la possibilité de masquer les colonnes dans la
+tables des opérations.</li>
+</ul>
+<h2>Version&nbsp;0.5.2 (21/01/2010)</h2>
+<ul>
+<li>Ajout de la possibilité d'éditer les modes de paiement.</li>
+</ul>
+<h2>Version&nbsp;0.5.1 (17/01/2010)</h2>
+<ul>
+<li>Support de l'impression de la liste des opérations.</li>
+<li>Ajout d'un bouton dans la table des opérations pour
+afficher/masquer toutes les sous-opérations.</li>
+</ul>
+<h2>Version&nbsp;0.5.0 (10/01/2010)</h2>
+<ul>
+<li>Ajout d'un vue budgetaire (Il semble que certains
+utilisateurs la veulent vraiment).</li>
+<li>Ajout d'un panneau de préférénces permettant de configurer
+la couleur du rapport des soldes
+(des utilisateurs ont rapporté que les soldes positifs étaient
+quasiment illisibles).</li>
+<li><span class="bugFix">Correction de
 bug&nbsp;</span>: Parfois, dans
 le panneau statistiques, certaines opérations étaient prises en compte
-alors qu'elles auraient du être rejetées par le filtre.</li></ul><h2>Version&nbsp;0.4.0 (03/01/2010)</h2><ul><li>Ajout de capacités de filtrage
+alors qu'elles auraient du être rejetées par le filtre.</li>
+</ul>
+<h2>Version&nbsp;0.4.0 (03/01/2010)</h2>
+<ul>
+<li>Ajout de capacités de filtrage
 complètes des opérations&nbsp; (sur les catégories, les modes, etc
-...).</li><li><span class="bugFix">Correction</span>
-de nombreuses erreurs dans la version anglaise.</li><li><span class="bugFix">Correction de bug </span>
+...).</li>
+<li><span class="bugFix">Correction</span>
+de nombreuses erreurs dans la version anglaise.</li>
+<li><span class="bugFix">Correction de bug </span>
 : Parfois, la prochaine échéance d'une opération périodique n'était pas
-mise à jour lors de la génération des opérations périodiques.</li><li><span class="bugFix">Correction de bug </span>
+mise à jour lors de la génération des opérations périodiques.</li>
+<li><span class="bugFix">Correction de bug </span>
 : L'outil de conversion des devises ne fonctionnait pas sous Ubuntu (et
-probablement sous d'autres OS Linux).</li><li><span class="bugFix">Correction de bug</span>&nbsp;:
+probablement sous d'autres OS Linux).</li>
+<li><span class="bugFix">Correction de bug</span>&nbsp;:
 L'outil de conversion des devises était très, très, très lent quand la
 banque centrale européenne n'avait pas mis à jour ses taux depuis plus
-de 24h (comme au jour de l'an, par exemple).</li><li><span class="bugFix">Correction de
+de 24h (comme au jour de l'an, par exemple).</li>
+<li><span class="bugFix">Correction de
 bug&nbsp;</span>: Parfois, le changement de compte d'une
-transaction ne fonctionnait pas.</li></ul><h2>Version&nbsp;0.3.7 (05/12/2009)</h2>
+transaction ne fonctionnait pas.</li>
+</ul>
+<h2>Version&nbsp;0.3.7 (05/12/2009)</h2>
 <ul>
 <li>Les dates peuvent à présent être sélectionnées dans un
 calendrier.</li>
